--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <section class="questions-answer">
         <div class="container">
           <div class="wrapper-questions-answer">
-            <div class="questions">
+            <div class="questions ativo">
               <h4 class="question">Como se preparar para a consulta?</h4>
 
               <p class="answer">
